# firebolt-openrpc

./: .commitlintrc.json  .gitignore  .npmignore  .releaserc  CHANGELOG.md  NOTICE  README.md  jest.config.cjs  jest.config.js  jest.config.json  package-lock.json  package.json  webpack.config.js
.github/: release.yml
.github/workflows/: check-pr.yml  merge-to-main.yml  merge-to-next-major.yml  release.yml  slack-notification.yml
languages/c/: Types.mjs  language.config.json
languages/c-structs/: language.config.json
languages/c-structs/templates/codeblocks/: mock-parameter.c  setter.c
languages/c-structs/templates/declarations/: event.c
languages/c-structs/templates/imports/: default.cpp
languages/c-structs/templates/json-types/: additionalProperties.c  property-assign.cpp  property-register.cpp  property.cpp  string.c  tuple.c
languages/c-structs/templates/methods/: event.c  property.c
languages/c-structs/templates/sdk/: CMakeLists.txt
languages/c-structs/templates/sections/: methods.c
languages/c-structs/templates/types/: anyOf.c  array.c  default.c  enum.cpp  enum.h  object.c  primitive.c  property.c  ref.c  title.c  tuple.c
languages/c/src/shared/: CMakeLists.txt
languages/c/src/types/: CommonCppTypes.mjs  CommonHeaderTypes.mjs  CppTypes.mjs  HeaderTypes.mjs  ImplHelpers.mjs  JSONHelpers.mjs  JSONTypes.mjs  NativeHelpers.mjs
languages/c/templates/accessors/: array.c  object.c  primitive.c  tuple.c
languages/c/templates/codeblocks/: mock-import.c  module.mjs  setter.c
languages/c/templates/declarations/: default.c  event.c  polymorphic-pull-event.c  polymorphic-pull.c  polymorphic-reducer.c  property.c  setter.c
languages/c/templates/sdk/src/: CMakeLists.txt  Config.cmake  Firebolt.h  FireboltSDK.h  Module.h  Params.config  Types.cpp  TypesPriv.h  firebolt.cpp
languages/c/templates/sdk/src/Accessor/: Accessor.cpp  Accessor.h  Config.h  WorkerPool.h
languages/c/templates/sdk/src/Event/: .Event.h.swp  Event.cpp  Event.h
languages/c/templates/sdk/src/Logger/: Logger.cpp  Logger.h
languages/c/templates/sdk/src/Properties/: Properties.h
languages/c/templates/sdk/src/Transport/: Transport.cpp  Transport.h
languages/c/templates/sdk/src/cmake/: CopySymlink.cmake
languages/c/templates/types/: array.c  (+10 more)
languages/cpp/: language.config.json
languages/cpp/src/shared/: CMakeLists.txt
languages/cpp/src/shared/cmake/: CodeCoverage.cmake
languages/cpp/src/shared/include/: error.h  firebolt.h  json_engine.h  time_new.h  types.h
languages/cpp/src/shared/src/: CMakeLists.txt  FireboltSDK.h  IGateway.h  IModule.h  TypesPriv.h  firebolt.cpp
languages/cpp/src/shared/src/Accessor/: Accessor.cpp  Accessor.h  WorkerPool.h
languages/cpp/src/shared/src/Async/: Async.cpp  Async.h
languages/cpp/src/shared/src/Async/bidi/: Async.cpp  Async.h
languages/cpp/src/shared/src/Event/: Event.cpp  Event.h
languages/cpp/src/shared/src/Event/bidi/: Event.cpp  Event.h
languages/cpp/src/shared/src/Event/unidi/: Event.cpp  Event.h
languages/cpp/src/shared/src/Gateway/: Gateway.cpp  Gateway.h  common.h  gateway_impl_bidi.h  gateway_impl_unidi.h
languages/cpp/src/shared/src/Gateway/bidi/: client.h  gateway_impl.h  server.h
languages/cpp/src/shared/src/Gateway/unidi/: gateway_impl.h
languages/cpp/src/shared/src/Logger/: Logger.cpp  Logger.h
languages/cpp/src/shared/src/Properties/: Properties.h
languages/cpp/src/shared/src/Transport/: CommunicationChannel.h  JsonEngine.h  MockTransport.h  Transport.h
languages/cpp/src/shared/src/Transport/bidi/: Transport.h
languages/cpp/src/shared/src/Transport/unidi/: Transport.h
languages/cpp/src/shared/test/: CMakeLists.txt  Main.c  Main.cpp  Module.h  OpenRPCTests.cpp  OpenRPCTests.h
languages/cpp/templates/: add-markups.sh
languages/javascript/: language.config.json
languages/javascript/src/: index.mjs
languages/javascript/templates/: index.mjs
languages/jsonrpc/: language.config.json
languages/markdown/: language.config.json
src/: cli.mjs  firebolt-openrpc.json  openrpc-template.json
src/declarations/: index.mjs
src/declarations/macros/: index.mjs
src/docs/: index.mjs
src/docs/macros/: index.mjs
src/js/http/: Server.js  Teardown.js
src/macrofier/: engine.mjs  index.mjs  types.mjs  types.mjs.bkp
src/modules/: advanced.json  provider.json  simple.json
src/openrpc/: index.mjs
src/schemas/: discovery.json  entertainment.json  firebolt-openrpc.json  intents.json  types.json
src/sdk/: index.mjs
src/sdk/macros/: index.mjs
src/shared/: configLoader.mjs  filesystem.mjs  io.mjs  javascript.mjs  json-schema.mjs  macrofier.mjs  markdown.mjs  methods.mjs  modules.mjs  template.mjs  typescript.mjs
src/slice/: index.mjs
src/template/csv/: index.md
src/template/js/: defaults.js  index.js
src/template/markdown/: example.md  index.md  method.md  provider-interface.md  schema.md
src/template/openrpc/: template.json
src/update/: index.mjs
src/validate/: index.mjs
src/validate/validator/: index.mjs
test/: Browser.js  Server.js  Setup.js  TransportHarness.js
test/openrpc/: advanced.json  provider.json  simple.json
test/schemas/: types.json
test/sharedSchemas/: types.json
test/suite/: method-as-attribute.test.js  properties-context.test.js  properties.test.js  props.test.js  provider-errors.test.js  provider.as-class.test.js  provider.as-object.test.js  provider.with-handshake.test.js  provider.with-multiple-methods.test.js  provider.with-no-response.test.js  simple.test.js  temporal-set.test.js
util/: publish_docs.sh
util/csv/: index.mjs
util/csv/merge/: index.mjs
util/declarations/: index.mjs
util/declarations/generator/: index.mjs
util/docs/: index.mjs
util/docs/macros/: index.mjs
util/openrpc/: index.mjs
util/openrpc/merge/: index.mjs
util/sdk/: index.mjs
util/sdk/macros/: index.mjs
util/shared/: descriptions.mjs  descriptions.test.mjs  helpers.mjs  javascript.mjs  json-schema.mjs  modules.mjs  template.mjs  thunder.mjs  typescript.mjs
util/specification/: index.mjs
util/validate/: index.mjs
util/validate/validation/: index.mjs
(+572 files in other folders)
